# vlm-mcp

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  README_zh.md  pyproject.toml
vlm_mcp/: __init__.py  server.py
