[project]
name = "vlm-mcp"
version = "0.2.0"
description = "VLM Image Understanding MCP Server - Support OpenAI protocol compatible VLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "VLM MCP Team", email = "team@vlm-mcp.example.com"}
]
keywords = ["mcp", "vlm", "image", "ocr", "ai", "vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
vlm-mcp = "vlm_mcp.server:run"

[project.urls]
Homepage = "https://github.com/example/vlm-mcp"
Repository = "https://github.com/example/vlm-mcp"
Issues = "https://github.com/example/vlm-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
